--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^7.3.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
